Refactor "initFramework" for readability